force-app/src/objects/ffct__MergeLayoutState__c.object
<CustomObject>
    <description>Hold the configuration and status of a merge layout job.</description>
    <fields>
        <fullName>ffct__Deployed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deployed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffct__Error__c</fullName>
        <description>stores any error if encountered</description>
        <label>Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffct__MergeCompleted__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Merge Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffct__SourceLayoutName__c</fullName>
        <label>Source Layout</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__SourceLayout__c</fullName>
        <label>Source Layout</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__TargetLayoutName__c</fullName>
        <label>Target Layout</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__TargetLayout__c</fullName>
        <label>Target Layout</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Merge Layout State</label>
    <listViews>
        <fullName>ffct__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LS-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merge Layout State</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>